# appose-java

./: .gitignore  .mailmap  CLAUDE.md  LICENSE.txt  Makefile  README.md  dev-environment.yml  environment.yml  notes.md  package.json  pom.xml  pyproject.toml  release.properties  setup.cfg
.github/: build.sh  setup.sh
.github/workflows/: build.yml
notes/: build-progress-design.md  python-package-structure.md
src/main/c/: ShmCreate.c
src/main/java/org/apposed/appose/: Appose.java  BaseBuilder.java  BuildException.java  BuildHandler.java  Builder.java  BuilderFactory.java  Builders.java  Bzip2Utils.java  CheckResult.java  Conda.java  CondaException.java  DType.java  DynamicBuilder.java  Environment.java  FileDownloader.java  FilePaths.java  GenericBuilder.java  GroovyWorker.java  JsonUtils.java  Mamba.java  MambaBuilder.java  MambaInstallException.java  MambaInstallerUtils.java  NDArray.java  Nullable.java  PixiBuilder.java  Platforms.java  Scheme.java  Schemes.java  ScriptSyntax.java  Service.java  SharedMemory.java  ShmFactory.java  ShmNDArray.java  SimpleBuilder.java  SystemBuilder.java  SystemBuilderFactory.java  TaskEvent.java  TaskException.java  Types.java  (+1 more)
src/main/python/appose/: __init__.py  basic-shm-in-python-only.py  environment.py  open-with-pyimagej-into-shm.py  python-worker.py  python_worker.py  receive-numpy-array-from-shm.py  service.py  types.py  use-ctypes-to-get-pointer-from-memoryview.py
src/test/java/org/apposed/appose/: ApposeTest.java  BuilderTest.java  DumpApi.java  FilePathsTest.java  NDArrayExampleGroovy.java  NDArrayExamplePython.java  NDArrayTest.java  Playground.java  PlaygroundGroovy.java  PlaygroundNDArray.java  PlaygroundNDArrayGroovy.java  PlaygroundSharedMemory.java  ProxyTest.java  ServiceTest.java  SharedMemoryTest.java  SyntaxTest.java  TaskExceptionTest.java  TestBase.java  TypesTest.java  WrapTest.java
src/test/python/: test_appose.py  test_basics.py
src/test/resources/envs/: cowsay-multi-env.toml  cowsay-pixi-pyproject.toml  cowsay-pixi.toml  cowsay-pyproject-groups.toml  cowsay-pyproject.toml  cowsay-requirements.txt  cowsay.yml
(+103 files in other folders)
