[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "appose"
version = "0.1.0.dev0"
description = "Appose: multi-language interprocess plugins with shared memory ndarrays."
license = {text = "Simplified BSD License"}
authors = [{name = "Appose developers"}]
readme = "README.md"
keywords = ["java", "javascript", "python", "cross-language", "interprocess"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Java Libraries",
    "Topic :: Software Development :: Libraries :: JavaScript Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# NB: Keep this in sync with environment.yml AND dev-environment.yml!
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
# NB: Keep this in sync with dev-environment.yml!
dev = [
    "autopep8",
    "black",
    "build",
    "flake8",
    "isort",
    "pytest",
    "numpy",
    "toml",
    "validate-pyproject[all]",
]

[project.urls]
homepage = "https://github.com/apposed/appose"
documentation = "https://github.com/apposed/appose/blob/main/README.md"
source = "https://github.com/apposed/appose"
download = "https://pypi.org/project/appose"
tracker = "https://github.com/apposed/appose/issues"

[tool.setuptools]
package-dir = {"" = "src/main/python"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src/main/python"]
namespaces = false

[tool.isort]
profile = "black"
